--- a/app/src/main/res/layout/fragment_business_dashboard.xml
+++ b/app/src/main/res/layout/fragment_business_dashboard.xml
@@ -146,11 +146,11 @@
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:cardBackgroundColor="@color/white"
                         android:layout_marginHorizontal="@dimen/_11sdp"
                         android:layout_marginTop="@dimen/_11sdp"
                         android:layout_marginBottom="@dimen/_7sdp"
                         android:visibility="visible"
+                        app:cardBackgroundColor="@color/white"
                         app:cardCornerRadius="@dimen/_10sdp">
 
                         <LinearLayout
@@ -165,8 +165,8 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="@dimen/_10sdp"
-                                android:layout_marginEnd="@dimen/_11sdp"
                                 android:layout_marginTop="@dimen/_15sdp"
+                                android:layout_marginEnd="@dimen/_11sdp"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:text="@string/business_officially_verified"
                                 android:textColor="@color/primary_black"
@@ -176,8 +176,8 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="@dimen/_10sdp"
-                                android:layout_marginEnd="@dimen/_11sdp"
                                 android:layout_marginTop="@dimen/_7sdp"
+                                android:layout_marginEnd="@dimen/_11sdp"
                                 android:layout_marginBottom="@dimen/_7sdp"
                                 app:cardCornerRadius="@dimen/_7sdp">
 
@@ -217,8 +217,8 @@
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
                                         android:orientation="horizontal"
-                                        android:paddingStart="@dimen/_6sdp"
                                         android:paddingVertical="@dimen/_11sdp"
+                                        android:paddingStart="@dimen/_6sdp"
                                         android:paddingEnd="@dimen/_11sdp">
 
                                         <TextView
@@ -303,9 +303,9 @@
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:cardBackgroundColor="@color/white"
                         android:layout_marginLeft="@dimen/_10sdp"
                         android:layout_marginRight="@dimen/_10sdp"
+                        app:cardBackgroundColor="@color/white"
                         app:cardCornerRadius="@dimen/_10sdp">
 
                         <LinearLayout
@@ -363,8 +363,8 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="@dimen/_11sdp"
+                                android:layout_marginEnd="@dimen/_11sdp"
                                 android:layout_marginBottom="@dimen/_22sdp"
-
                                 android:fontFamily="@font/opensans_regular"
                                 android:text="@string/merchant_balance"
                                 android:textColor="@color/dark_grey"
@@ -378,10 +378,10 @@
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:cardBackgroundColor="@color/white"
                         android:layout_marginLeft="@dimen/_10sdp"
                         android:layout_marginTop="@dimen/_10sdp"
                         android:layout_marginRight="@dimen/_10sdp"
+                        app:cardBackgroundColor="@color/white"
                         app:cardCornerRadius="@dimen/_10sdp">
 
                         <LinearLayout
@@ -527,9 +527,9 @@
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_marginTop="@dimen/_7sdp"
-                                        android:text="0"
                                         android:layout_marginBottom="@dimen/_22sdp"
                                         android:fontFamily="@font/opensans_bold"
+                                        android:text="0"
                                         android:textColor="@color/primary_black"
                                         android:textSize="@dimen/_14ssp" />
                                 </LinearLayout>
@@ -567,8 +567,8 @@
                                             android:id="@+id/refunds"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
-                                            android:text="0.00"
                                             android:fontFamily="@font/opensans_bold"
+                                            android:text="0.00"
                                             android:textColor="@color/primary_black"
                                             android:textSize="@dimen/_16ssp" />
 
@@ -606,8 +606,8 @@
                                             android:id="@+id/processing_fees"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
-                                            android:text="0.00"
                                             android:fontFamily="@font/opensans_bold"
+                                            android:text="0.00"
                                             android:textColor="@color/primary_black"
                                             android:textSize="@dimen/_16ssp" />
 
@@ -654,8 +654,8 @@
                                             android:id="@+id/misc_fee"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
-                                            android:text="0.00"
                                             android:fontFamily="@font/opensans_bold"
+                                            android:text="0.00"
                                             android:textColor="@color/primary_black"
                                             android:textSize="@dimen/_16ssp" />
 
@@ -694,8 +694,8 @@
                                             android:id="@+id/net_amount"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
-                                            android:text="0.00"
                                             android:fontFamily="@font/opensans_bold"
+                                            android:text="0.00"
                                             android:textColor="@color/primary_black"
                                             android:textSize="@dimen/_16ssp" />
 
@@ -717,8 +717,8 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginHorizontal="@dimen/_13sdp"
                                 android:layout_weight="1"
-                                android:visibility="gone"
-                                android:orientation="horizontal">
+                                android:orientation="horizontal"
+                                android:visibility="gone">
 
                                 <LinearLayout
                                     android:layout_width="match_parent"
@@ -758,6 +758,7 @@
                                             android:textColor="@color/primary_black"
                                             android:textSize="@dimen/_10ssp" />
                                     </LinearLayout>
+
                                     <TextView
                                         android:id="@+id/date_of_highest_ticket"
                                         android:layout_width="wrap_content"
@@ -793,8 +794,8 @@
                                             android:id="@+id/average_ticket"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
-                                            android:text="0.00"
                                             android:fontFamily="@font/opensans_bold"
+                                            android:text="0.00"
                                             android:textColor="@color/primary_black"
                                             android:textSize="@dimen/_16ssp" />
 
@@ -817,19 +818,19 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginHorizontal="@dimen/_13sdp"
                                 android:layout_marginTop="@dimen/_10sdp"
+                                android:layout_marginBottom="@dimen/_14sdp"
                                 android:fontFamily="@font/opensans_regular"
                                 android:text="@string/sales_orders"
-                                android:visibility="visible"
                                 android:textColor="@color/dark_grey"
-                                android:layout_marginBottom="@dimen/_14sdp"
-                                android:textSize="@dimen/_12ssp" />
+                                android:textSize="@dimen/_12ssp"
+                                android:visibility="visible" />
 
                             <com.greenbox.coyni.utils.SeekBarWithFloatingText
                                 android:id="@+id/sb_today_volume"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:visibility="visible"
-                                android:layout_gravity="center" />
+                                android:layout_gravity="center"
+                                android:visibility="visible" />
 
                             <View
                                 android:layout_width="match_parent"
@@ -856,11 +857,11 @@
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:cardBackgroundColor="@color/white"
                         android:layout_marginLeft="@dimen/_10sdp"
                         android:layout_marginTop="@dimen/_10sdp"
                         android:layout_marginRight="@dimen/_10sdp"
                         android:layout_marginBottom="@dimen/_10sdp"
+                        app:cardBackgroundColor="@color/white"
                         app:cardCornerRadius="@dimen/_10sdp">
 
                         <LinearLayout
@@ -1145,7 +1146,7 @@
                                 android:layout_marginHorizontal="@dimen/_11sdp"
                                 android:layout_marginTop="@dimen/_22sdp"
                                 android:layout_weight="1"
-                                android:orientation="vertical"/>
+                                android:orientation="vertical" />
 
                             <TextView
                                 android:id="@+id/batchNoTransaction"
@@ -1198,10 +1199,10 @@
                         android:id="@+id/cv_reserve_view"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:cardBackgroundColor="@color/white"
                         android:layout_marginLeft="@dimen/_10sdp"
                         android:layout_marginRight="@dimen/_10sdp"
                         android:layout_marginBottom="@dimen/_10sdp"
+                        app:cardBackgroundColor="@color/white"
                         app:cardCornerRadius="@dimen/_10sdp">
 
                         <LinearLayout
@@ -1452,7 +1453,7 @@
                                 android:id="@+id/reserveReleaseListLL"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:orientation="vertical"/>
+                                android:orientation="vertical" />
 
                             <TextView
                                 android:id="@+id/releaseNoTransaction"
@@ -1484,7 +1485,8 @@
                                 android:text="@string/v_r_history"
                                 android:textColor="@color/primary_green"
                                 android:textSize="@dimen/_11ssp"
-                                android:visibility="gone"/>
+                                android:visibility="gone" />
+
                             <TextView
                                 android:id="@+id/disable_reserve_list"
                                 android:layout_width="wrap_content"
@@ -1535,11 +1537,11 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_gravity="center"
                                 android:layout_marginTop="@dimen/_20sdp"
                                 android:fontFamily="@font/opensans_bold"
                                 android:text="@string/identity_verification_under_review"
                                 android:textAlignment="center"
-                                android:layout_gravity="center"
                                 android:textColor="@color/primary_black"
                                 android:textSize="@dimen/_16ssp" />
 
@@ -1581,15 +1583,15 @@
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        app:cardBackgroundColor="@color/white"
                         android:layout_margin="@dimen/_10sdp"
+                        app:cardBackgroundColor="@color/white"
                         app:cardCornerRadius="@dimen/_10sdp">
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:gravity="center"
                             android:background="@color/white"
+                            android:gravity="center"
                             android:orientation="vertical">
 
                             <ImageView
@@ -1625,15 +1627,15 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="@dimen/_10sdp"
-                                android:paddingBottom="@dimen/_50sdp"
-                                android:orientation="vertical">
+                                android:orientation="vertical"
+                                android:paddingBottom="@dimen/_50sdp">
 
                                 <androidx.cardview.widget.CardView
                                     android:id="@+id/cv_additional_data_continue"
                                     android:layout_width="match_parent"
                                     android:layout_height="@dimen/_43sdp"
-                                    android:gravity="center"
                                     android:layout_margin="@dimen/_10sdp"
+                                    android:gravity="center"
                                     app:cardBackgroundColor="@color/primary_green"
                                     app:cardCornerRadius="@dimen/_22sdp">
 
@@ -1741,8 +1743,8 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:gravity="center"
                             android:background="@color/white"
+                            android:gravity="center"
                             android:orientation="vertical">
 
                             <ImageView
