--- a/app/src/main/res/layout/business_add_new_business_account.xml
+++ b/app/src/main/res/layout/business_add_new_business_account.xml
@@ -12,15 +12,24 @@
         android:orientation="vertical"
         android:paddingStart="@dimen/_22sdp"
         android:paddingEnd="@dimen/_22sdp">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_40sdp"
+            android:layout_marginBottom="@dimen/_9sdp">
+
         <ImageView
             android:id="@+id/imv_close"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingTop="@dimen/_4sdp"
+            android:paddingEnd="@dimen/_10sdp"
+            android:paddingBottom="@dimen/_4sdp"
             android:layout_marginRight="@dimen/_10sdp"
             android:src="@drawable/ic_x"
-            android:layout_marginTop="@dimen/_44sdp"
-            android:layout_marginBottom="@dimen/_13sdp"
             />
+        </LinearLayout>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
