--- a/app/src/main/res/layout/business_onboarding_open_new_account.xml
+++ b/app/src/main/res/layout/business_onboarding_open_new_account.xml
@@ -9,14 +9,22 @@
         android:orientation="vertical"
         android:paddingStart="@dimen/_21sdp"
         android:paddingEnd="@dimen/_21sdp">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_40sdp"
+            android:layout_marginBottom="@dimen/_8sdp">
+
         <ImageView
             android:id="@+id/imv_close"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingEnd="@dimen/_12sdp"
+            android:paddingTop="@dimen/_4sdp"
+            android:paddingBottom="@dimen/_5sdp"
             android:src="@drawable/ic_x"
-            android:layout_marginTop="@dimen/_44sdp"
-            android:layout_marginBottom="@dimen/_13sdp"
             />
+        </LinearLayout>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
