Friday 06/05/22 Merchant bug fix

--- a/app/src/main/res/layout/activity_additional_action_upload.xml
+++ b/app/src/main/res/layout/activity_additional_action_upload.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="@dimen/_21sdp"
-    android:layout_marginRight="@dimen/_21sdp"
+    android:paddingHorizontal="@dimen/_21sdp"
     android:background="@color/white"
     android:orientation="vertical"
     tools:context=".view.IdVeAdditionalActionActivity">
