--- a/app/src/main/res/layout/activity_review_application.xml
+++ b/app/src/main/res/layout/activity_review_application.xml
@@ -1171,7 +1171,7 @@
 
                 <TextView
                     android:id="@+id/spannableTV"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="@dimen/_60sdp"
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:fontFamily="@font/opensans_regular"
