--- a/app/src/main/res/layout/ssn_popup.xml
+++ b/app/src/main/res/layout/ssn_popup.xml
@@ -39,7 +39,8 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:id="@+id/einLL"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_15sdp"
             android:layout_marginBottom="@dimen/_10sdp"
@@ -47,7 +48,7 @@
 
             <TextView
                 android:id="@+id/einTV"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/opensans_semibold"
                 android:text="EIN/TIN"
@@ -60,14 +61,17 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/light_gray" />
+            android:background="@color/light_gray"
+            android:visibility="gone"/>
 
         <LinearLayout
+            android:id="@+id/ssnLL"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_10sdp"
             android:layout_marginBottom="@dimen/_10sdp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="visible">
 
             <TextView
                 android:id="@+id/ssnTV"
@@ -85,7 +89,8 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginBottom="@dimen/_5sdp"
-            android:background="@color/light_gray" />
+            android:background="@color/light_gray"
+            android:visibility="gone"/>
 
     </LinearLayout>
 
