--- a/app/src/main/res/layout/activity_review_application.xml
+++ b/app/src/main/res/layout/activity_review_application.xml
@@ -180,8 +180,9 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="right"
                             android:background="@drawable/ic_eyeclose"
-                            android:paddingTop="@dimen/_3sdp"
-                            android:paddingBottom="@dimen/_3sdp" />
+                            android:paddingTop="@dimen/_5sdp"
+                            android:paddingBottom="@dimen/_5sdp"
+                            />
                     </LinearLayout>
 
                     <View
