--- a/app/src/main/res/layout/activity_additional_information_required.xml
+++ b/app/src/main/res/layout/activity_additional_information_required.xml
@@ -150,7 +150,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="@dimen/_10sdp"
                             android:gravity="right"
-                            android:src="@drawable/ic_complete"
+                            android:src="@drawable/complete"
 
                             />
 
