--- a/app/src/main/res/layout/activity_gift_card_details.xml
+++ b/app/src/main/res/layout/activity_gift_card_details.xml
@@ -176,6 +176,7 @@
                                     android:id="@+id/amountET"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
+                                    android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                                     android:fontFamily="@font/opensans_semibold"
                                     android:imeOptions="actionNext"
                                     android:inputType="numberDecimal"
@@ -184,8 +185,7 @@
                                     android:textColor="@color/text_color"
                                     android:textColorHint="@color/light_gray"
                                     android:textCursorDrawable="@drawable/cursor_color"
-                                    android:textSize="@dimen/_12ssp"
-                                    android:autofillHints="AUTOFILL_HINT_SMS_OTP"/>
+                                    android:textSize="@dimen/_12ssp" />
 
                             </com.google.android.material.textfield.TextInputLayout>
                         </RelativeLayout>
@@ -197,7 +197,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_5sdp"
-                        android:gravity="center"
                         android:orientation="horizontal"
                         android:visibility="gone">
 
@@ -232,6 +231,7 @@
                             android:id="@+id/firstNameET"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                             android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                             android:fontFamily="@font/opensans_semibold"
                             android:imeOptions="actionNext"
@@ -245,8 +245,7 @@
                             android:textColorHint="@color/light_gray"
                             android:textCursorDrawable="@drawable/cursor_color"
                             android:textIsSelectable="false"
-                            android:textSize="@dimen/_12ssp"
-                            android:autofillHints="AUTOFILL_HINT_SMS_OTP"/>
+                            android:textSize="@dimen/_12ssp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -290,6 +289,7 @@
                             android:id="@+id/lastNameET"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                             android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                             android:fontFamily="@font/opensans_semibold"
                             android:imeOptions="actionNext"
@@ -302,8 +302,7 @@
                             android:textColor="@color/text_color"
                             android:textColorHint="@color/light_gray"
                             android:textCursorDrawable="@drawable/cursor_color"
-                            android:textSize="@dimen/_12ssp"
-                            android:autofillHints="AUTOFILL_HINT_SMS_OTP"/>
+                            android:textSize="@dimen/_12ssp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -348,6 +347,7 @@
                             android:id="@+id/emailET"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:autofillHints="creditCardSecurityCode"
                             android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@+-_."
                             android:fontFamily="@font/opensans_semibold"
                             android:imeOptions="actionDone"
@@ -360,8 +360,7 @@
                             android:textColor="@color/text_color"
                             android:textColorHint="@color/light_gray"
                             android:textCursorDrawable="@drawable/cursor_color"
-                            android:textSize="@dimen/_12ssp"
-                            android:autofillHints="creditCardSecurityCode"/>
+                            android:textSize="@dimen/_12ssp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
