--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -18,6 +18,11 @@
             android:paddingTop="@dimen/_15sdp"
             android:paddingEnd="@dimen/_10sdp"
             android:paddingBottom="@dimen/_15sdp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                >
 
             <TextView
                 android:id="@+id/listagreementsTV"
@@ -25,8 +30,17 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/opensans_semibold"
                 android:textColor="@color/primary_black"
+                android:layout_marginEnd="@dimen/_1sdp"
                 android:textSize="@dimen/_12ssp" />
 
+                <TextView
+                    android:id="@+id/listDocsTV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/opensans_regular"
+                    android:textColor="@color/primary_black"
+                    android:textSize="@dimen/_11ssp" />
+            </LinearLayout>
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
